--- a/Projects/styles.css
+++ b/Projects/styles.css
@@ -1,8 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-a, button {
-    font-family: "Monserrat", sans-serif;
+* {
+    background-color: #24252A;
 }
 
-.text {
-    font-family: "Montserrat", sans-serif;
+.link {
+    list-style: none;
+}
+
+.link li {
+    display: inline-block;
+    padding: 20px 0px;
+}
+
+.link li a {
+    color: white;
+    text-decoration: none;
+    font-family: sans-serif;
+    font-size: 30px;
+    transition: all 0.4s ease 0s;
+}
+
+.link li a:hover {
+    color: #1F51FF;
 }
