--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     background-color: #24252A;
 }
 
-li, a, button {
+li, a, button, p {
     font-family: "Montserrat", sans-serif;
     font-size: 20px;
     color: #edf0f1;
