--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,14 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #24252A;
+    background-color: #222730;
+    font-family: "Montserrat", sans-serif;
 }
-
 #header1 {
     font-family: "Montserrat", sans-serif;
 }
 
-li, a, button {
+header li, header a, header button {
     font-family: "Montserrat", sans-serif;
     font-size: 20px;
     color: #edf0f1;
@@ -25,7 +25,11 @@ header {
     align-items: center;
     padding: 25px 2.5%;
     background-color: #1a1b1f;
-    box-shadow: 0px 5px 3px #202125;
+    box-shadow: 0px 0.5px 20px #000000;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    order: 0;
 }
 
 .logo {
@@ -39,30 +43,44 @@ header {
 
 .nav_links li {
     display: inline-block;
-    padding: 0px 20px
+    margin: 0;
 }
 
 .nav_links li a {
-    transition: all 0.4s ease 0s;
+    transition: all 0.6s ease 0s;
+}
+.cta {
+    padding: 34px 10px;
+}
+.nav_links li .cta:hover {
+    color: #4CAAB3;
+    background-color: #edf0f1;
+}
+#home_button {
+    margin-right: 20px;
 }
 
-.nav_links li a:hover {
-    color: #1d4bf0;
-}
-
-button {
+header button {
     padding: 9px 25px;
-    background-color: #1F51FF;
+    /*
+    animation-name: colorchange;
+    animation-iteration-count: infinite;
+    animation-duration: 16s;
+    */
+    background-color: #4CAAB3;
     border: none;
     border-radius: 50px;
     cursor: pointer;
-    transition: all 0.4s ease 0s;
+    transition: all 0.6s ease 0s;
 }
 
-button:hover {
+header button:hover {
     background-color: whitesmoke;
-    color: #1F51FF
+    color: #4CAAB3;
+    animation-name: colorchange;
+    animation-play-state: paused;
 }
+
 .title {
     font-family: "Montserrat", sans-serif;
     color: #edf0f1;
@@ -77,10 +95,213 @@ button:hover {
     list-style: none;   
     font-size: 50px;
 }
+
 .hidden_link :hover {
     color: #0088a9
 }
 
 nav ul li a{
     background-color: #1a1b1f;
+}
+
+#depresso_mode {
+    color: crimson;
+}
+#depresso_mode:hover {
+    background-color:crimson;
+    color: whitesmoke;
+}
+/*
+.right {
+    margin: 2%;
+    margin-left: 0;
+    height: 2000px;
+    width: 25%;
+    float: right;
+    
+    animation-name: colorchange;
+    animation-iteration-count: infinite;
+    animation-duration: 16s;
+    
+    background-color: #1F51FF;
+    box-shadow: inset 0px 0px 5px black;
+    border-radius: 7.5px;
+}
+
+.left {
+    margin: 2%;
+    margin-right: 0;
+    background-color: #1F51FF;
+    height: 2000px;
+    width: 70%;
+    float: left;
+    border-radius: 7.5px;
+    box-shadow: inset 0px 0px 5px black;
+
+}
+*/
+#main {
+    margin-top: 100px;
+}
+/*
+@keyframes colorchange{
+    0% {background-color: #1F51FF;}
+    25% {background-color: turquoise;}
+    50% {background-color: rgb(0, 194, 97);}
+    75% {background-color: rgb(117, 88, 245);}
+    100% {background-color: #1F51FF;}
+}
+
+.circle {
+    margin: 250px 0;
+    height: 250px;
+    width: 250px;
+    background-color: #FFF1C1;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    left: 42.5%;
+}
+
+#pyramid1 {
+    height: 200px;
+    width: 200px;
+    background-color: #FE5F55;
+    transform: rotate(45deg);
+    position: relative;
+    top: 125px;
+    left: 70px;
+}
+
+#pyramid2 {
+    height: 100px;
+    width: 100px;
+    position: relative;
+    bottom: 40px;
+    transform: rotate(45deg);
+    right: 5px;
+    background-color: #FE5F55;
+}
+*/
+main {
+    width: 100%;
+}
+body {
+    background-color: #222730;
+    height: 2000px;
+    position: relative;
+}
+#logo {
+    height: 100px;
+    width: 100px;
+    margin: 25px;
+    border-radius: 50%;
+    float: left;
+    transition: all 0.6s ease 0s;
+}
+
+#logo:hover, .shadow:hover {
+    box-shadow: 0 0 40px black;
+}
+.yt h1:hover {
+    color: #4CAAB3;
+}
+.yt h1 {
+    float: left;
+    position: relative;
+    background:rgba(0, 0, 0, 0);
+    top: 60px;
+    color: whitesmoke;
+    font-size: 25px;
+    transition: all 0.6s ease 0s;
+}
+#seperate {
+    height: 1.5px;
+    width: 95%;
+    background: #39415070;
+    position: static;
+    margin-left: 2.5%;
+    
+}
+#thumbnail {
+    display: flex;
+    justify-content: center;
+    position:static;
+    margin-top: 50px;
+}
+.yt {
+    display: flex;
+    position: static;
+    margin-top: 110px;
+}
+.thumbnails {
+    height: 90%;
+    width: 90%;
+    position:static;
+    margin: 20px 20px;
+    transition: all 0.6s ease 0s;
+}
+#home_page {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    background-color: #222730;
+    position:static;
+    margin-top: 150px;
+}
+.yt a h1 {
+    position: static;
+    margin-top: 60px;
+}
+.blank {
+    background-color: #222730;
+}
+#home_page img {
+    position:static;
+    height: 300px;
+    width: 300px;
+    margin: 50px;
+    margin-top: 0;
+    border-radius: 50%;
+    border: 5px solid #4CAAB3;
+    /*animation-duration: 2s;
+    animation-name: logo;
+    animation-iteration-count: infinite;*/
+    animation-name: spinny;
+    animation-duration: 2s;
+    box-shadow: 0 0 10px rgb(0, 0, 0);
+}
+
+@keyframes logo {
+    0% {color: #4CAAB3}
+    50% {color:#572ad4}
+    100% {color: #4CAAB3}
+}
+@keyframes spinny {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
+#home_page h1 {
+    font-weight: heavy;
+    margin-right: 50px;
+    height: 35px;
+    text-decoration: underline;
+    animation: logo 4s infinite 
+}
+#home_page p a {
+    text-decoration: none;
+    color: whitesmoke;
+}
+#home_page p {
+    font-size: 29px;
+    color:whitesmoke;
+}
+#para1 {
+    display: block;
+    float: left;
+    height: 100%;
+    width: 50%;
+}
+main {
+    height: 1500px;
 }
